# tour

./: .env-docker  Dockerfile  README.md  cada.ini  docker-compose.yaml  entrypoint.sh  makefile  pyproject.toml  pytest.ini  run_app.sh
src/: manage.py
src/app/: controller.py  repo.py  schemas.py  serializers.py
src/core/: exceptions.py  validators.py
src/core/entities/: company.py  department.py  employee.py
src/core/interfaces/: repo.py  use_cases.py
src/core/usecases/: company.py  department.py  employee.py
src/infra/: api.py  factory.py  manage.py
src/infra/register/: apps.py  models.py  urls.py
src/infra/register/migrations/: 0001_initial.py  0002_company_department_employee_delete_person.py  0003_alter_company_cnpj.py  0004_user.py  0005_delete_user_alter_employee_city_alter_employee_email_and_more.py  0006_alter_department_name.py
src/infra/register/models/: __init__.py  base.py  company.py  departmant.py  employee.py
src/infra/settings/: asgi.py  base.py  urls.py  wsgi.py
src/infra/tour/: urls.py
src/infra/tour/migrations/: 0001_initial.py
src/infra/tour/models/: __init__.py  base.py  company.py  departmant.py  employee.py
src/tests/app/: test_repo.py
src/tests/core/: test_entity_company.py  test_usecase_company.py  test_usecase_department.py  test_usecase_employee.py  test_validadors.py
src/tests/infra/: test_api.py
