[tool.poetry]
name = "tour"
version = "0.1.0"
description = ""
authors = ["marcocapozzoli <marcocapozzoli90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
psycopg2 = "^2.9.6"
pytest = "^7.3.1"
djangorestframework = "^3.14.0"
dj-database-url = "^2.0.0"
validate-docbr = "^1.10.0"
pydantic = "^1.10.7"
django-filter = "^23.2"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
